--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,7 +139,8 @@ color: var(--success);
 .mycontainer{
   max-width: 1164px;
   position: relative;
-  margin :auto;
+  margin-left :auto;
+  margin-right :auto;
 }
 
 /*extend tailwind*/
